--- a/postgres/src/lib/assets/css/scrollbar-color.css
+++ b/postgres/src/lib/assets/css/scrollbar-color.css
@@ -5,17 +5,17 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-	@apply bg-base-100;
+	@apply bg-[var(--color-base-100)];
 	border-radius: 2px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	@apply bg-base-300 bg-opacity-50;
+	@apply bg-[var(--color-base-300)]/50;
 	border-radius: 2px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	@apply bg-base-300;
+	@apply bg-[var(--color-base-300)];
 }
