--- a/postgres/src/app.css
+++ b/postgres/src/app.css
@@ -1,9 +1,13 @@
-@import './scrollbar-color.css';
+@import './lib/assets/css/scrollbar-color.css';
 
 @import 'tailwindcss';
 @plugin "daisyui" {
 	themes: all;
 }
+
+@plugin "@tailwindcss/typography";
+@plugin "@tailwindcss/forms";
+@plugin "@tailwindcss/container-queries";
 
 @plugin "daisyui/theme" {
 	name: 'ctw';
@@ -50,7 +54,9 @@
 		border-color: var(--color-gray-200, currentcolor);
 	}
 }
-
+div {
+	color: var(--color-base-content);
+}
 pre code {
 	@apply font-mono! text-base!;
 }
